--- a/script/style.css
+++ b/script/style.css
@@ -15,7 +15,7 @@ body {
     margin: 0;
 }
 h1 {
-    margin: 84px 0;
+    margin: 84px 20px;
     font-size: 55px;
 }
 #sticky {
@@ -79,3 +79,29 @@ input {
     -webkit-appearance: none;
     margin: 0;
 } ::placeholder { color: #333; }
+@media screen and (max-width: 818px){
+    #sticky img { height: 70px; }
+    #sticky p { font-size: 36px; }
+    #items { margin: 5em 5%; }
+}
+@media screen and (max-width: 560px){
+    h1 { font-size: 49px; }
+    #sticky img { height: 60px; }
+    #sticky p { font-size: 33px; }
+    #items { margin: 5em 0; }
+}
+@media screen and (max-width: 480px){
+    h1 { font-size: 45px; }
+    #sticky img { height: 50px; }
+    #sticky p { font-size: 29px; }
+}
+@media screen and (max-width: 410px){
+    h1 { font-size: 40px; }
+    #sticky img { height: 40px; }
+    #sticky p { font-size: 25px; }
+}
+@media screen and (max-width: 380px){
+    h1 { font-size: 37px; }
+    #sticky p { font-size: 23px; }
+    #items .item { width: 19em; }
+}
