--- a/script/style.css
+++ b/script/style.css
@@ -71,6 +71,7 @@ input {
     pointer-events: none;
     border-radius: 5px;
     text-align: center;
+    user-select: none;
     color: #333;
     border: none;
     width: 5em;
