--- a/script/style.css
+++ b/script/style.css
@@ -23,6 +23,7 @@ h1 {
     justify-content: center;
     align-items: center;
     position: sticky;
+    padding: 5px 0;
     display: flex;
     gap: 20px;
     top: 0;
